# warp-knockout-crud

./: .gitignore  Cargo.toml  Makefile  Rate KnockOut Actors With Warp.postman_collection.json  readme.md
src/: db.rs  handler.rs  main.rs  model.rs  router.rs
